[package]

name = "pngbox"
version = "0.1.0"
authors = ["The Servo Project Developers"]

links = "png-sys"
build = "build.rs"

[dependencies]
rustc-serialize = "0"

[dependencies.png-sys]
git = "https://github.com/servo/rust-png"

[build-dependencies.gcc]
git = "https://github.com/alexcrichton/gcc-rs"
