[package]

name = "pngbox"
version = "0.1.0"
authors = ["The Servo Project Developers"]

links = "png-sys"
build = "build.rs"

[dependencies]
rustc-serialize = "0"

[dependencies.png-sys]
git = "https://github.com/servo/rust-png"

[dependencies.urpc]
git = "https://github.com/kmcallister/urpc"

[dependencies.gaol]
git = "https://github.com/pcwalton/gaol"

[dependencies.unix_socket]
git = "https://github.com/sfackler/rust-unix-socket"

[build-dependencies.gcc]
git = "https://github.com/alexcrichton/gcc-rs"
